# project_stm32

./: 01.txt  02.txt  03.txt
2_1_Project_Template/: CMakeLists.txt
2_1_Project_Template/.cache/clangd/index/: bsp.c.A98F0A332F07CCB8.idx  misc.h.5CEF67BD503CDF43.idx  ringbuffer.c.91C787DCC8603A11.idx  stm32f10x_conf.h.88188397B9D9BC7E.idx  stm32f10x_dbgmcu.h.1178322A0CCC8D97.idx  (+9 more)
2_1_Project_Template/cmake/: toolchain.cmake
2_1_Project_Template/scripts/: build.sh
2_1_Project_Template/src/: main.c
2_1_STM32_Project_Template/: .gitignore  CMakeLists.txt
2_1_STM32_Project_Template/.cache/clangd/index/: core_cm3.h.D2287E351EBF6B05.idx  main.c.085D5CDDC738F3B4.idx  misc.c.5754CC7C2C29B3C9.idx  startup_stm32f10x_md.s.4EACC42281D17A60.idx  stm32f10x.h.4FB64D9243F32BB9.idx  stm32f10x_adc.h.3CB21DC6442862AB.idx  stm32f10x_bkp.h.325081FE9C49D476.idx  stm32f10x_can.h.95CB037E078D61E4.idx  stm32f10x_cec.h.CEBDCD610AB563EC.idx  stm32f10x_crc.h.178DEEA43E764D50.idx  stm32f10x_dac.h.CC2852251CD53C7B.idx  stm32f10x_gpio.c.CAD6F136FCEC89A4.idx  stm32f10x_gpio.h.3686657B42C2DF28.idx  stm32f10x_i2c.h.A3A764D84DAFA6ED.idx  stm32f10x_iwdg.h.806AAD1442F08865.idx  stm32f10x_pwr.h.50F85DDA258656E0.idx  stm32f10x_rcc.c.482585334637C707.idx  stm32f10x_rcc.h.3962DA1730CCE6F6.idx  stm32f10x_rtc.h.1FF837FEC9B0A9EF.idx  stm32f10x_spi.h.C069543CD0A9E64E.idx  stm32f10x_tim.h.33A81A7B5015F912.idx  stm32f10x_usart.h.40050C24FC2DBE67.idx  system_stm32f10x.h.9E34ED6BEE0B4613.idx  task_led.c.104C7635663E142C.idx
2_1_STM32_Project_Template/linker/: STM32F103C8T6.ld
2_1_STM32_Project_Template/scripts/: build.sh  flash.sh
3_1/: Makefile
3_1/Start/: startup_stm32f10x_md.s
3_1/User/: main.c
3_1_LED_Blink/: CMakeLists.txt
3_1_LED_Blink/cmake/: toolchain.cmake
3_1_LED_Blink/include/: Delay.h
3_1_LED_Blink/linker/: STM32F103C8T6.ld
3_1_LED_Blink/src/: main.c
3_1_LED_Blink_bat/: .clangd
3_2/: Makefile
3_2_LED_Water_Light/cmake/: toolchain.cmake
3_2_LED_Water_Light/src/: main.c
3_3/: compile_commands.json
3_3_Buzzer/: CMakeLists.txt
3_3_Buzzer/scripts/: flash.sh
3_3_Buzzer/src/: main.c
3_4/: Makefile  detailed_comparison.txt
3_4/User/: main.c
3_4_Button_Control_LED/: CMakeLists.txt  Untitled-1.md  learning-note.md
3_4_Button_Control_LED/cmake/: toolchain.cmake
3_4_Button_Control_LED/include/: Key.h  LED.h
3_4_Button_Control_LED/src/: main.c
3_4_Button_Control_LED/src/hardware/: Key.c  LED.c  LED.h
3_5/: CMakeLists.txt  STM32F103C8T6.ld  startup_stm32f10x_md_gcc.s
3_5/src/: main.c
3_5_LightSensorControl_Buzzer/: .clangd  CMakeLists.txt
3_5_LightSensorControl_Buzzer/.cache/clangd/index/: Buzzer.c.80E9F6282294C98C.idx  Buzzer.h.4BF5B9EE0036B17C.idx  Delay.c.106D62E01099E10C.idx  Delay.c.866428C9868D9D12.idx  Delay.h.66E2C55B6FED816F.idx  Key.c.875484A97BFB610A.idx  Key.h.81061F1F80FEBF93.idx  LED.c.B66A36A96FDC5F7E.idx  LED.c.E96213698A32A61F.idx  LED.h.7543E3AA3176B503.idx  core_cm3.h.2814165889AD7983.idx  core_cm3.h.2A6A3D7748828A3C.idx  core_cm3.h.4675F9BAB0FF1EE3.idx  core_cm3.h.5DC8A0455B4EA0DA.idx  main.c.566E43CCA503595A.idx  main.c.7D704D2C1A7038A5.idx  misc.c.55D0A5CC0FC3E648.idx  misc.c.EE259749DCDF0EA6.idx  misc.h.1EE01D737E2899BE.idx  misc.h.4F341F3823106FEC.idx  misc.h.CC4ADFCFBA3DBDEF.idx  startup_stm32f10x_md.s.E739C7B5CAF5CBBF.idx  stm32f10x.h.2EC0715A1746AA83.idx  stm32f10x.h.F764CD993F0AC879.idx  stm32f10x_adc.h.AF35B80348F786C9.idx  stm32f10x_adc.h.B0E852085C9243DA.idx  stm32f10x_bkp.h.C60E6230F7CB21D1.idx  stm32f10x_can.h.6A71AE14F4B68337.idx  stm32f10x_cec.h.05C8DAE7BCE35A5F.idx  stm32f10x_cec.h.F6FCA7A75E053F08.idx  stm32f10x_conf.h.4C038505434E868E.idx  stm32f10x_crc.h.4A35D6C597E2D8FF.idx  stm32f10x_crc.h.8F0AECAA89867F5A.idx  stm32f10x_crc.h.CFDD9B3FFA3D35CB.idx  stm32f10x_dac.h.65D3D1400982F0BA.idx  stm32f10x_dbgmcu.h.083F4419AA2AF2E5.idx  stm32f10x_dbgmcu.h.A1D77E06623FF84D.idx  stm32f10x_dma.h.7FAEE12971FB638B.idx  stm32f10x_dma.h.83C02B92DE759B10.idx  stm32f10x_exti.h.8A084E1545BF57D5.idx  (+47 more)
3_5_LightSensorControl_Buzzer/include/: Buzzer.h  Key.h  LightSensor.h
3_5_LightSensorControl_Buzzer/scripts/: build.sh
3_5_LightSensorControl_Buzzer/src/: main.c
3_5_LightSensorControl_Buzzer/src/hardware/: Buzzer.c  Key.c  LightSensor.c
4_1/cmake_build/: compile_commands.json
4_1/cmake_build/ldscripts/: STM32F103C8T6.ld
4_1/cmake_build/scripts/: build.sh
4_1_OLED_Display/: CMakeLists.txt
4_1_OLED_Display/include/: OLED.h  OLED_Font.h
4_1_OLED_Display/src/: main.c
4_1_OLED_Display/src/hardware/: OLED.c  OLED_Font.c
5_1/: CMakeLists.txt
5_1/cmake/: gcc_arm_none_eabi.cmake
5_1/linker/: STM32F103C8Tx.ld
5_1/scripts/: build.sh  flash.sh
5_1/src/app/: main.c
5_1/src/core/: core_cm3.c  system_stm32f10x.c
5_1/src/drivers/: CountSensor.h  OLED_Font.h
5_1/startup/: startup_stm32f10x_md.S
5_2/: CMakeLists.txt  build.sh  flash.sh
5_2/Hardware/: Encoder.h  Key.c  Key.h  LED.h  OLED.h  OLED_Font.h
5_2/System/: Delay.h
5_2/User/: main.c
5_2/cmake/: STM32F103C8Tx_FLASH.ld  gcc_stm32f103c8.cmake
5_2/startup/: startup_stm32f103xb.s
6_1_Timer_Time_Base_Interrupt/: compile_commands.json
6_1_Timer_Time_Base_Interrupt/cmake_build/: CMakeLists.txt  startup_stm32f10x_md_gcc.s  toolchain-arm-none-eabi.cmake
6_1_Timer_Time_Base_Interrupt/src/Hardware/: OLED.h  Timer.c
6_1_Timer_Time_Base_Interrupt/src/Start/: core_cm3.c
6_1_Timer_Time_Base_Interrupt/src/User/: main.c
6_2_Timer_External_Clock/: compile_commands.json
6_2_Timer_External_Clock/cmake_build/: compile_commands.json
6_2_Timer_External_Clock/cmake_build/scripts/: build.sh  flash.sh
6_2_Timer_External_Clock/src/Hardware/: Timer.c  Timer.h
6_2_Timer_External_Clock/src/User/: main.c
bat3_1_LEDBlink/: STM32F103C8Tx_FLASH.ld  compile_commands.json
bat3_2_LEDWaterLight/User/: main.c
bat3_3_Buzzer/: Makefile
bat3_3_Buzzer/User/: main.c
bat3_5_LightSensorControl_Buzzer/cmake/: arm-none-eabi.cmake
bat3_5_LightSensorControl_Buzzer/src/: core_cm3.c
bat4_1_OLED_Display/cmake_build/: CMakeLists.txt  syscalls.c
bat4_1_OLED_Display/src/User/: main.c
(+407 files in other folders)
